add support for /v3/receiver-validation
